fix: Spacing adjustments between Quote and Gallery and creation of BottomCTA component

--- a/styles/custom-swiper.css
+++ b/styles/custom-swiper.css
@@ -1,5 +1,5 @@
 .home-gallery-swiper {
-  padding-bottom: 2rem;
+  padding-bottom: 2rem !important;
 }
 
 .home-gallery-swiper .swiper-pagination {
